syntax = "proto3";

package proto;

option java_package = "com.hederahashgraph.api.proto.java";
option java_multiple_files = true;

import "BasicTypes.proto";

// See [ConsensusService.deleteTopic()](#proto.ConsensusService)
message ConsensusDeleteTopicTransactionBody {
    TopicID topicID = 1; // Topic identifier.
}
